// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/RatingSorter should match snapshot for ascending 1`] = `

<div class="RatingSorter"
     data-reactroot
>
  <label for="rating-sorter">
    Show me hotels by star rating
    <select id="rating-sorter">
      <option selected
              value="ascending"
      >
        Low to High (Ascending)
      </option>
      <option value="descending">
        High to Low (Descending)
      </option>
    </select>
  </label>
</div>

`;

exports[`components/RatingSorter should match snapshot for descending 1`] = `

<div class="RatingSorter"
     data-reactroot
>
  <label for="rating-sorter">
    Show me hotels by star rating
    <select id="rating-sorter">
      <option value="ascending">
        Low to High (Ascending)
      </option>
      <option selected
              value="descending"
      >
        High to Low (Descending)
      </option>
    </select>
  </label>
</div>

`;
